FlexDeploy 8.0/fdtlt82/FLEXDEPLOY-12131/objects/agf__ADM_Cloud__c.object
<CustomObject>
    <fields>
        <fullName>agf__Cloud_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cloud Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Clouds1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Cloud_Type__c</fullName>
        <label>Cloud Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Escalation_Security_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Escalation Security Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>As_Cloud_Escalation_Security_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Parent_Cloud__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent Cloud</label>
        <referenceTo>agf__ADM_Parent_Cloud__c</referenceTo>
        <relationshipLabel>Clouds</relationshipLabel>
        <relationshipName>Clouds</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Primary_Security_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Security Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>As_Cloud_Primary_Security_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Secondary_Security_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Security Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>As_Cloud_Secondary_Security_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Security_Approval_Group_Name__c</fullName>
        <label>Security Approval Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Security_Guidance__c</fullName>
        <label>Security Guidance</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>agf__Security_Guidence__c</fullName>
        <label>Security Guidence</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>agf__Tertiary_Security_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tertiary Security Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>As_Cloud_Tertiary_Security_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cloud</label>
    <listViews>
        <fullName>agf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cloud Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clouds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>